--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,8 @@
 
 html{
     height: 100vh;
+    font-family: $font-family;
+    font-size: $font-size;
 }
 
 main{
@@ -15,8 +17,7 @@ main{
 body{
     background-color: $background-color;
     color: $text-color;
-    font-family: $font-family;
-    font-size: $font-size-lg;
+
 }
 
 header{
@@ -49,3 +50,16 @@ header{
     border-color:inherit;
 }
 
+.actions{
+    margin-left: 10px;
+}
+.copyToClipboard{
+    margin-left: 5px;
+}
+.copyToClipboard:hover{
+    cursor: pointer;
+}
+
+table {
+    background-color: $background-color;
+}
